--- a/.github/workflows/html5.yml
+++ b/.github/workflows/html5.yml
@@ -26,7 +26,7 @@ jobs:
           haxelib install lime 7.9.0 --quiet
           haxelib install openfl 9.1.0 --quiet
           haxelib install actuate --quiet
-          haxelib --never install flixel --quiet
+          haxelib --never install flixel 5.0.1-alpha --quiet
           haxelib install flixel-tools --quiet
           haxelib install flixel-ui --quiet
           haxelib install hscript --quiet
