--- a/.github/workflows/html5.yml
+++ b/.github/workflows/html5.yml
@@ -23,16 +23,18 @@ jobs:
         run: |
           haxelib setup ~/haxelib
           haxelib install hxcpp > /dev/null
-          haxelib install lime --quiet
+          haxelib install lime 7.9.0 --quiet
           haxelib install openfl 9.1.0 --quiet
           haxelib install actuate --quiet
-          haxelib --never git flixel https://github.com/mcagabe19/flixel-5.0.1.git
+          haxelib --never git flixel https://github.com/mcagabe19/flixel-4.11.0.git
           haxelib install flixel-ui --quiet
           haxelib install hscript --quiet
           haxelib install flixel-addons --quiet
           haxelib git faxe https://github.com/uhrobots/faxe.git
           haxelib git polymod https://github.com/mcagabe19/polymod-for-steve.git
           haxelib set openfl 9.1.0
+          haxelib set lime 7.9.0
+          haxelib set flixel git
       - name: Create Version Tag
         run: echo "${{github.run_id}}" > VERSION
       - name: Compile
