--- a/.github/workflows/android-fast.yml
+++ b/.github/workflows/android-fast.yml
@@ -121,7 +121,7 @@ jobs:
         env:
           ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
       - name: Compile
-        run: haxelib run lime build android -armv6 -D no-compilation -D macro-times -D analyzer-optimize -${{ matrix.arch }} --app-version="4.0.0-${{ github.run_id}}"
+        run: haxelib run lime build android -armv6 -D nolua -D no-compilation -D macro-times -D analyzer-optimize -${{ matrix.arch }} --app-version="4.0.0-${{ github.run_id}}"
       - name: Publish Artifact
         uses: actions/upload-artifact@main
         with:
