--- a/.github/workflows/android-fast.yml
+++ b/.github/workflows/android-fast.yml
@@ -80,7 +80,7 @@ jobs:
         uses: nttld/setup-ndk@main
         id: setup-ndk
         with:
-          ndk-version: r21e
+          ndk-version: r11c
       - name: Setup Java JDK
         uses: actions/setup-java@main
         with:
