--- a/.github/workflows/html5.yml
+++ b/.github/workflows/html5.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-${{ matrix.version }}
     strategy:
       matrix:
-        version: [20.04, 22.04]
+        version: [22.04]
         build: [release, debug]
     steps:
       - name: Checkout
@@ -18,7 +18,7 @@ jobs:
       - name: Setup Haxe
         uses: krdlab/setup-haxe@master
         with:
-          haxe-version: 4.1.5
+          haxe-version: 4.2.5
       - name: Install Haxelib
         run: |
           haxelib setup ~/haxelib
